--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section id="Contact" class="contact">
         <h2>Contact details</h2>
         <p>Email : iva.pattilakuzhi@gmail.com</p>
-        <p>Phono : 7510431739</p>
+        <!-- <p>Phono : 7510431739</p> -->
     </section>
 
     <footer>
