--- a/index.html
+++ b/index.html
@@ -7,58 +7,152 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body background="">
-    <Header>
-        <H1>My Portfolio</H1>
+
+    <header>
+        <h1>My Portfolio</h1>
         <nav>
-            <a href="#Home">Home</a>
-            <a href="#About">About</a>
-            <a href="#Projects">Projects</a>
-            <a href="#Contact">Contact</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#education">Education</a>
+            <a href="#experience">Experience</a>
+            <a href="#projects">Projects</a>
+            <a href="#certifications">Certifications</a>
+            <a href="#contact">Contact</a>
         </nav>
+    </header>
 
-    </Header>
-    <br>
-    <br>
-
-    <section id="Home" class="Myself">
-        <h2>Heloo I'm <b>Iva Sony</b></h2>
-        <p>Full stack developer</p>
-        <a href="#Projects">View my works</a>
-        
-
+    <section class="hero" id="home">
+        <h2>Hello, I'm <b>Iva Sony</b></h2>
+        <p>BTech Computer Science Graduate</p>
+        <p>Actively seeking a multifaceted role within a flourishing environment that challenges me and provides opportunities for growth.</p>
+        <a class="btn" href="#projects">View My Works</a>
     </section>
-    <section id="About" class="about">
+
+    <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Graduated from Rajagiri School of Engineering and Technology</p>
-
+        <p>I am a BTech Computer Science Graduate, and I'm actively seeking a multifaceted role within a flourishing environment that not only challenges me but also provides opportunities for professional growth as well as personal. Looking forward to continuously improve my skills through learning and development, dive into cutting-edge technology and to remain at the forefront of innovation.</p>
     </section>
-    <section id="Projects" class="pro">
+
+    <section id="contact" class="contact">
+        <h2>Contact</h2>
+        <ul style="list-style:none; padding-left:0;">
+            <li><strong>Email:</strong> iva.pattilakuzhi@gmail.com</li>
+            <li><strong>Phone:</strong> 75104 31739</li>
+            <li><strong>Address:</strong> No2. Highland Gardens, Padamugal Palachuvad Rd, Kakkanad, Ernakulam, 682030</li>
+        </ul>
+    </section>
+
+    <section id="skills" class="about">
+        <h2>Skills</h2>
+        <div style="display:flex; flex-wrap:wrap; gap:32px;">
+            <div style="flex:1; min-width:220px;">
+                <h3>Hard Skills</h3>
+                <ul>
+                    <li>Machine Learning</li>
+                    <li>DBMS</li>
+                    <li>Cloud Computing</li>
+                </ul>
+            </div>
+            <div style="flex:1; min-width:220px;">
+                <h3>Soft Skills</h3>
+                <ul>
+                    <li>Networking and Organizing</li>
+                    <li>Leadership</li>
+                    <li>Teamwork</li>
+                    <li>Creativity</li>
+                </ul>
+            </div>
+            <div style="flex:1; min-width:220px;">
+                <h3>Languages & Frameworks</h3>
+                <ul>
+                    <li>C</li>
+                    <li>C++</li>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>Javascript</li>
+                    <li>HTML</li>
+                    <li>PHP</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section id="education" class="about">
+        <h2>Education Background</h2>
+        <ul>
+            <li>B-Tech (Bachelor of Technology) in Computer Science & Engineering from Rajagiri School of Engineering and Technology (Autonomous), Kakkanad, Ernakulam, Kerala. (CGPA: 8.59/10)<br>Honours in Machine Learning</li>
+            <li>Central Board of Secondary Education at Rajagiri Christhu Jayanthi Public School, Kakkanad Kerala. (Score 95.20%)</li>
+            <li>Higher Secondary Certificate in Computer - Math at Rajagiri Christhu Jayanthi Public School, Kakkanad, Kerala. (Score: 88.00%)</li>
+        </ul>
+    </section>
+
+    <section id="experience" class="about">
+        <h2>Professional Experience</h2>
+        <div>
+            <h3>Inker Robotics Solutions Pvt Ltd.</h3>
+            <p><strong>IoT Intern</strong> (10 day internship)</p>
+            <ul>
+                <li>Learned about the basics of Arduino</li>
+                <li>Worked with Dobots and Mbots</li>
+                <li>Used sensors to implement object detection, conveyor system, etc.</li>
+                <li>Tested various VR products, AI, 3D printing and IoT</li>
+                <li>Represented the company at Tathva conducted at NIT Calicut</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Honours in Machine Learning and AI</h3>
+            <ul>
+                <li>Sentiment Hashtag Embedding</li>
+                <li>Neural Networks and Deep Learning</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="projects" class="projects">
         <h2>Projects</h2>
-        <div class="projectCont">
-        <div class="p1">
-            <h3>project 1</h3>
-            <p>html Project</p>
+        <div class="project-container">
+            <div class="project-card">
+                <h3>CardioCare</h3>
+                <p>ML based Heart Disease Risk Prediction & Doctor Recommendation System</p>
+            </div>
+            <div class="project-card">
+                <h3>Hashtag Recommendation</h3>
+                <p>Hashtag recommendation for multimodal data and Short Description Generation for Images</p>
+            </div>
+            <div class="project-card">
+                <h3>Flood Prediction</h3>
+                <p>Enhancing Flood Prediction using ML techniques and satellite observations: A Spatial Analysis Approach</p>
+            </div>
+            <div class="project-card">
+                <h3>Games</h3>
+                <p>SpaceShooter and BallBounce Games with C++, SDL</p>
+            </div>
+            <div class="project-card">
+                <h3>Library Management</h3>
+                <p>Library Management System</p>
+            </div>
+            <div class="project-card">
+                <h3>Fast Track Cars</h3>
+                <p>Car tracking and management system</p>
+            </div>
         </div>
-        <div class="p1">
-            <h3>project 2</h3>
-            <p>Javascript Project</p>
-        </div>
-        <div class="p1">
-            <h3>project 3</h3>
-            <p>Java project</p>
-        </div>
-        </div>
-
     </section>
-    
-    <section id="Contact" class="contact">
-        <h2>Contact details</h2>
-        <p>Email : iva.pattilakuzhi@gmail.com</p>
-        <!-- <p>Phono : 7510431739</p> -->
+
+    <section id="certifications" class="certificates">
+        <h2>Certifications & Awards</h2>
+        <ul>
+            <li>Deep Learning - IIT Ropar, NPTEL Course</li>
+            <li>Reinforcement Learning - IIT Madras, NPTEL Course</li>
+            <li>Merit Award - S3 & S7, RSET</li>
+            <li>Cloud Computing Workshop at NIT Calicut</li>
+            <li>Workshop on Python for Data Science at RSET</li>
+            <li>Google AI Campus Fest - Tensorflow workshop and Hackathon</li>
+        </ul>
     </section>
 
     <footer>
-        <p>All rights reserved </p>
+        <p>All rights reserved &copy; Iva Sony</p>
     </footer>
 </body>
 </html>
