--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iva Sony | Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body background="">
+<body>
 
     <header>
         <h1>My Portfolio</h1>
@@ -31,128 +32,158 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>I am a BTech Computer Science Graduate, and I'm actively seeking a multifaceted role within a flourishing environment that not only challenges me but also provides opportunities for professional growth as well as personal. Looking forward to continuously improve my skills through learning and development, dive into cutting-edge technology and to remain at the forefront of innovation.</p>
-    </section>
-
-    <section id="contact" class="contact">
-        <h2>Contact</h2>
-        <ul style="list-style:none; padding-left:0;">
-            <li><strong>Email:</strong> iva.pattilakuzhi@gmail.com</li>
-            <li><strong>Phone:</strong> 75104 31739</li>
-            <li><strong>Address:</strong> No2. Highland Gardens, Padamugal Palachuvad Rd, Kakkanad, Ernakulam, 682030</li>
-        </ul>
+        <p>I am a BTech Computer Science Graduate, and I'm actively seeking a multifaceted role within a flourishing environment that not only challenges me but also provides opportunities for professional growth as well as personal.</p>
     </section>
 
     <section id="skills" class="about">
         <h2>Skills</h2>
         <div style="display:flex; flex-wrap:wrap; gap:32px;">
             <div style="flex:1; min-width:220px;">
-                <h3>Hard Skills</h3>
+                <h3>Backend & Database</h3>
+                <ul>
+                    <li>Java & Spring Boot</li>
+                    <li>Hibernate & JPA</li>
+                    <li>DBMS</li>
+                </ul>
+            </div>
+            <div style="flex:1; min-width:220px;">
+                <h3>Frontend & Web</h3>
+                <ul>
+                    <li>React.js</li>
+                    <li>JavaScript (JS)</li>
+                    <li>HTML, CSS</li>
+                </ul>
+            </div>
+            <div style="flex:1; min-width:220px;">
+                <h3>Other Technical</h3>
                 <ul>
                     <li>Machine Learning</li>
-                    <li>DBMS</li>
                     <li>Cloud Computing</li>
+                    <li>C, C++, PHP</li>
                 </ul>
             </div>
             <div style="flex:1; min-width:220px;">
-                <h3>Soft Skills</h3>
-                <ul>
-                    <li>Networking and Organizing</li>
-                    <li>Leadership</li>
-                    <li>Teamwork</li>
-                    <li>Creativity</li>
-                </ul>
-            </div>
-            <div style="flex:1; min-width:220px;">
-                <h3>Languages & Frameworks</h3>
-                <ul>
-                    <li>C</li>
-                    <li>C++</li>
-                    <li>Python</li>
-                    <li>Java</li>
-                    <li>Javascript</li>
-                    <li>HTML</li>
-                    <li>PHP</li>
-                </ul>
-            </div>
+            <h3>Languages</h3>
+            <ul>
+                <li>Python & Java</li>
+                <li>C & C++</li>
+                <li>JavaScript</li>
+                <li>SQL & PHP</li>
+            </ul>
+        </div>
         </div>
     </section>
 
     <section id="education" class="about">
         <h2>Education Background</h2>
-        <ul>
-            <li>B-Tech (Bachelor of Technology) in Computer Science & Engineering from Rajagiri School of Engineering and Technology (Autonomous), Kakkanad, Ernakulam, Kerala. (CGPA: 8.59/10)<br>Honours in Machine Learning</li>
-            <li>Central Board of Secondary Education at Rajagiri Christhu Jayanthi Public School, Kakkanad Kerala. (Score 95.20%)</li>
-            <li>Higher Secondary Certificate in Computer - Math at Rajagiri Christhu Jayanthi Public School, Kakkanad, Kerala. (Score: 88.00%)</li>
+        <div>
+            <h3><b>B-Tech in Computer Science & Engineering</b></h3>
+        </div>
+        <ul style="list-style-type: square; padding-left: 20px;">
+            <li><b>Rajagiri School of Engineering and Technology </b>, Kakkanad. (CGPA: 8.59/10)</li>
+            <li><b>Honours in Machine Learning and Artificial Intelligence</b></li>
+            <li><b>CBSE (Class XII)</b> - Score: 88.00%</li>
+            <li><b>CBSE (Class X)</b> - Score: 95.20%</li>
         </ul>
     </section>
 
     <section id="experience" class="about">
         <h2>Professional Experience</h2>
-        <div>
-            <h3>Inker Robotics Solutions Pvt Ltd.</h3>
-            <p><strong>IoT Intern</strong> (10 day internship)</p>
+        <div style="margin-bottom: 20px;">
+            <h3>Ruby Seven Studios</h3>
+            <p><strong>Associate Game Programmer</strong> | 1.5 years</p>
             <ul>
-                <li>Learned about the basics of Arduino</li>
-                <li>Worked with Dobots and Mbots</li>
-                <li>Used sensors to implement object detection, conveyor system, etc.</li>
-                <li>Tested various VR products, AI, 3D printing and IoT</li>
-                <li>Represented the company at Tathva conducted at NIT Calicut</li>
+                <li>Developed and optimized game logic and features.</li>
+                <li>Worked on debugging and performance tuning for gaming modules.</li>
             </ul>
         </div>
-        <div>
-            <h3>Honours in Machine Learning and AI</h3>
+
+        <div style="margin-bottom: 20px;">
+            <h3>Inker Robotics Solutions Pvt Ltd.</h3>
+            <p><strong>IoT Intern</strong> (10-day internship)</p>
             <ul>
-                <li>Sentiment Hashtag Embedding</li>
-                <li>Neural Networks and Deep Learning</li>
+                <li>Learned basics of Arduino and worked with Dobots and Mbots.</li>
+                <li>Implemented object detection systems using sensors.</li>
+                <li>Tested VR products and AI-driven IoT solutions.</li>
             </ul>
         </div>
     </section>
 
     <section id="projects" class="projects">
         <h2>Projects</h2>
+        <p style="margin-bottom: 20px; color: #555;">Click on a project to view detailed descriptions.</p>
         <div class="project-container">
-            <div class="project-card">
+            <div class="project-card" onclick="openProject('vcabs')">
+                <h3>VCabs</h3>
+                <p>Spring Boot + React Full-Stack Solution.</p>
+                <span class="more-link">Learn More →</span>
+            </div>
+
+            <div class="project-card" onclick="openProject('cardiocare')">
                 <h3>CardioCare</h3>
-                <p>ML based Heart Disease Risk Prediction & Doctor Recommendation System</p>
+                <p>ML-based Heart Disease Risk Prediction.</p>
+                <span class="more-link">Learn More →</span>
             </div>
-            <div class="project-card">
+
+            <div class="project-card" onclick="openProject('hashtag')">
                 <h3>Hashtag Recommendation</h3>
-                <p>Hashtag recommendation for multimodal data and Short Description Generation for Images</p>
+                <p>multimodal data and Short Description Generation for Images using Neural Networks.</p>
+                <span class="more-link">Learn More →</span>
             </div>
-            <div class="project-card">
+
+            <div class="project-card" onclick="openProject('flood')">
                 <h3>Flood Prediction</h3>
-                <p>Enhancing Flood Prediction using ML techniques and satellite observations: A Spatial Analysis Approach</p>
+                <p>Spatial analysis using Machine Learning.</p>
+                <span class="more-link">Learn More →</span>
             </div>
-            <div class="project-card">
-                <h3>Games</h3>
-                <p>SpaceShooter and BallBounce Games with C++, SDL</p>
+
+            <div class="project-card" onclick="openProject('games')">
+                <h3>Games (C++/SDL)</h3>
+                <p>SpaceShooter and BallBounce Games.</p>
+                <span class="more-link">Learn More →</span>
             </div>
-            <div class="project-card">
-                <h3>Library Management</h3>
-                <p>Library Management System</p>
-            </div>
-            <div class="project-card">
+
+            <div class="project-card" onclick="openProject('fasttrack')">
                 <h3>Fast Track Cars</h3>
-                <p>Car tracking and management system</p>
+                <p>Inventory tracking and management system.</p>
+                <span class="more-link">Learn More →</span>
             </div>
         </div>
     </section>
 
-    <section id="certifications" class="certificates">
-        <h2>Certifications & Awards</h2>
-        <ul>
-            <li>Deep Learning - IIT Ropar, NPTEL Course</li>
-            <li>Reinforcement Learning - IIT Madras, NPTEL Course</li>
-            <li>Merit Award - S3 & S7, RSET</li>
-            <li>Cloud Computing Workshop at NIT Calicut</li>
-            <li>Workshop on Python for Data Science at RSET</li>
-            <li>Google AI Campus Fest - Tensorflow workshop and Hackathon</li>
+    <div id="projectModal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn" onclick="closeModal()">&times;</span>
+            <div id="modalBody">
+                </div>
+        </div>
+    </div>
+
+    <section id="certifications" class="certificates-section">
+    <div class="about"> <h2>Certifications & Awards</h2>
+        <ul style="list-style-type: disc; padding-left: 20px;">
+            <li><b>Deep Learning</b> - IIT Ropar, NPTEL Course</li>
+            <li><b>Reinforcement Learning</b> - IIT Madras, NPTEL Course</li>
+            <li><b>Merit Award</b> - S3 & S7, Rajagiri School of Engineering (RSET)</li>
+            <li><b>Cloud Computing Workshop</b> - NIT Calicut</li>
+            <li><b>Python for Data Science</b> - Workshop at RSET</li>
+            <li><b>Google AI Campus Fest</b> - Tensorflow Workshop and Hackathon</li>
+        </ul>
+    </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Contact</h2>
+        <ul style="list-style:none; padding-left:0;">
+            <li><strong>Email:</strong> iva.pattilakuzhi@gmail.com</li>
+            <li><strong>LinkedIn:</strong> linkedin.com/in/ivasony</li>
         </ul>
     </section>
 
     <footer>
-        <p>All rights reserved &copy; Iva Sony</p>
+        <p>All rights reserved &copy; 2026 Iva Sony</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
